--- a/produceri3s/pom.xml
+++ b/produceri3s/pom.xml
@@ -35,11 +35,31 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>KafkaProducerExample</mainClass>
+                            <!-- <mainClass>KafkaProducerExample</mainClass> -->
+                            <mainClass>fr.unice.scale.latencyaware.producer.KafkaProducerExample</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
+                        <plugin>
+                                <groupId>org.xolstice.maven.plugins</groupId>
+                                <artifactId>protobuf-maven-plugin</artifactId>
+                                <version>0.6.1</version>
+                                <configuration>
+                                    <protocArtifact>com.google.protobuf:protoc:3.19.1:exe:${os.detected.classifier}</protocArtifact>
+                                    <pluginId>grpc-java</pluginId>
+                                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.43.1:exe:${os.detected.classifier}</pluginArtifact>
+                                    <protoSourceRoot>${project.basedir}/../proto</protoSourceRoot>
+                                </configuration>
+                                <executions>
+                                    <execution>
+                                        <goals>
+                                            <goal>compile</goal>
+                                            <goal>compile-custom</goal>
+                                        </goals>
+                                    </execution>
+                                </executions>
+                            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
