--- a/IntegrationController/pom.xml
+++ b/IntegrationController/pom.xml
@@ -86,7 +86,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Main</mainClass>
+                                    <mainClass>fr.unice.scale.latencyaware.controller.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
