--- a/variableconsumer/pom.xml
+++ b/variableconsumer/pom.xml
@@ -82,7 +82,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ConsumerMain</mainClass>
+                                    <mainClass>fr.unice.scale.latencyaware.consumer.ConsumerMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
